# capable

./: .gitignore  ATTENUATION.md  AUSTRAL-LIKE-TODO.md  CURRENT_STATUS.md  Cargo.toml  FIXME-GENERICS.md  FIXME.md  PLAN.md  PROGRESS.md  TODO-2.md  TODO-MEMORY.md  TODO.md  TRAITS.md  TUTORIAL.md  justfile  progress.md  spec.md
.github/workflows/: ci.yml
capc/: CODE_OVERVIEW.md  Cargo.toml
capc/src/: abi.rs  ast.rs  codegen.rs  error.rs  hir.rs  lexer.rs  lib.rs  loader.rs  main.rs  parser.rs  typeck.rs
capc/src/codegen/: abi_quirks.rs  emit.rs  intrinsics.rs  layout.rs  mod.rs
capc/src/typeck/: check.rs  collect.rs  lower.rs  mod.rs  monomorphize.rs
capc/tests/: cli.rs  parser.rs  run.rs  typecheck.rs
capc/tests/snapshots/: parser__snapshot_basic_module.snap  parser__snapshot_doc_comments.snap  parser__snapshot_generics_basic.snap  parser__snapshot_struct_and_match.snap  parser__snapshot_struct_literal.snap
caplsp/: Cargo.toml
caplsp/src/: main.rs
config/: app.txt
docs/: ABI.md  ARCHITECTURE.md  ATTENUATION.md  DEFER.md  POLICY.md  README.md  SAMPLES.md  TUTORIAL.md  caps.md  editor.md  extern_demo.md  generics.md  memory.md  memory_safety.md  slice_design.md
docs/code-browser/: README.md
examples/config_loader/: app.conf  config_loader.cap
nvim/: capable.lua
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: install-editor.sh
stdlib/: README.md
tools/: gen_code_browser.py  gen_website.py
tree-sitter-capable/: README.md  grammar.js  package.json
vscode/: README.md  extension.js  package.json
website/: gen_website.py  index.html
(+227 files in other folders)
