[package]
name = "capc"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
logos = "0.14"
miette = { version = "7.2", features = ["fancy"] }
thiserror = "1.0"

[dev-dependencies]
insta = { version = "1.39", features = ["glob"] }
